added author and repo info

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "react-native-i-text-input",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "RNITextInput allows you to use ios12 OTP auto fill feature. Now, if you get a one-time password (OTP) via a text message, iOS 12 will display an auto-fill prompt, which will help you quickly paste it in the app",
   "main": "index.js",
   "scripts": {
@@ -15,9 +15,17 @@
     "OTP-fill",
     "ios"
   ],
-  "author": "",
-  "license": "",
+  "author": "“Sonu <“iamsonumalik@gmail.com”> (https://github.com/iamsonumalik)",
+  "license": "ISC",
   "peerDependencies": {
     "react-native": "^0.41.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iamsonumalik/RNITextInput.git"
+  },
+  "bugs": {
+    "url": "https://github.com/iamsonumalik/RNITextInput/issues"
+  },
+  "homepage": "https://github.com/iamsonumalik/RNITextInput#readme"
 }
